# prettify

./: .gitignore  Cargo.toml  LICENSE  README.md
languages/markdown/: Cargo.toml  README.md
languages/markdown/src/: lib.rs  nodes.rs
languages/markdown/src/format/: fenced_code_block.rs  header.rs  heading.rs  indented_code_block.rs  leaf.rs  mod.rs  paragraph.rs
languages/markdown/src/parse/: block.rs  empty_line.rs  header.rs  helpers.rs  leaf.rs  mod.rs  paragraph.rs
languages/toml/: Cargo.toml
languages/toml/src/: boolean.rs  comment.rs  helpers.rs  key.rs  key_value_pair.rs  lib.rs  line_endings.rs  nodes.rs  string.rs  table.rs
languages/toml/src/format/: key.rs  (+1 more)
prettify/: Cargo.toml  README.md
prettify/src/: doc.rs  helper.rs  helpers.rs  lib.rs
prettify/src/builders/: align.rs  break_parent.rs  concat.rs  cursor.rs  dedent.rs  fill.rs  group.rs  if_break.rs  indent.rs  join.rs  line.rs  line_suffix.rs  mark.rs  mod.rs  string.rs  trim.rs
prettify/src/command/: group.rs  hardline.rs  join.rs  mod.rs
prettify/src/print/: align.rs  fill.rs  fits.rs  group.rs  if_break.rs  indent.rs  line.rs  mod.rs  print_to_string.rs  shared.rs  trim.rs
prettify/tests/: unit_align.rs  unit_break_parent.rs  unit_command_hardline.rs  unit_command_join.rs  unit_concat.rs  unit_conditional_group.rs  unit_dedent.rs  unit_dedent_to_root.rs  unit_doc_string.rs  unit_fill.rs  unit_hard_line.rs  unit_hardline.rs  unit_if_break.rs  unit_indent.rs  unit_join.rs  unit_line.rs  unit_line_suffix.rs  unit_literal_line.rs  unit_soft_line.rs  unit_string.rs  unit_trim.rs
(+140 files in other folders)
