[package]
name = "prettify"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "An extensible, language-agnostic code formatter based on Prettier written in Rust."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
