[package]
name = "prettify-markdown"
version = "0.2.0"
license = "MIT"
description = "Format Markdown at the speed of Rust."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettify = { path = "../../prettify", version = ">=0.3.0" }
nom = "7"
regex = "1"
comrak = "0.13.1"
