[package]
name = "prettify-toml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettify = { path = "../../prettify", version = ">=0.3.0" }
"prettify-shared" = { path = "../shared", version = ">=0.1.0" }
nom = "7"
